--- a/rubbish.html
+++ b/rubbish.html
@@ -6,7 +6,7 @@
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   
   <meta name="viewport" content="width=device-width, initial-scale=1, minimum-scale=1">
-  <link rel="shortcut icon" href="assets/images/bps-logo-150x40.png" type="image/x-icon">
+  <link rel="shortcut icon" href="assets/images/12278679-178671905814554-6409431870868768230-n-128x128.png" type="image/x-icon">
   <meta name="description" content="">
   
   <title>Rubbish</title>
@@ -119,7 +119,7 @@ div,span,h1,h2,h3,h4,h5,h6,p,blockquote,a,ol,ul,li,figcaption,textarea,input{fon
 </div>
 
 <div class="navbar-buttons mbr-section-btn"><a class="btn btn-md btn-secondary display-7" href="registration.html">REGISTER<span class="iconfont-wrapper">
-            <span class="fa fa-arrow-right mbr-iconfont-btn mbr-iconfont"><svg width="19" height="19" viewBox="0 0 1792 1792" xmlns="http://www.w3.org/2000/svg" fill="currentColor"><path d="M1600 960q0 54-37 91l-651 651q-39 37-91 37-51 0-90-37l-75-75q-38-38-38-91t38-91l293-293h-704q-52 0-84.5-37.5t-32.5-90.5v-128q0-53 32.5-90.5t84.5-37.5h704l-293-294q-38-36-38-90t38-90l75-75q38-38 90-38 53 0 91 38l651 651q37 35 37 90z"></path></svg></span>
+            <span class="fa fa-arrow-right mbr-iconfont-btn mbr-iconfont"><svg width="100%" height="100%" viewBox="0 0 1792 1792" xmlns="http://www.w3.org/2000/svg" fill="currentColor"><path d="M1600 960q0 54-37 91l-651 651q-39 37-91 37-51 0-90-37l-75-75q-38-38-38-91t38-91l293-293h-704q-52 0-84.5-37.5t-32.5-90.5v-128q0-53 32.5-90.5t84.5-37.5h704l-293-294q-38-36-38-90t38-90l75-75q38-38 90-38 53 0 91 38l651 651q37 35 37 90z"></path></svg></span>
         </span>
     </a></div>
 <div class="collapse navbar-collapse" id="navbarSupportedContent">
