--- a/appointments.html
+++ b/appointments.html
@@ -51,7 +51,7 @@ div,span,h1,h2,h3,h4,h5,h6,p,blockquote,a,ol,ul,li,figcaption,textarea,input{fon
     <a class="nav-link link text-white display-7" href="stafflist.html">
     STAFF</a>
 </li><li class="nav-item">
-    <a class="nav-link link text-white display-7" href="#">
+    <a class="nav-link link text-white display-7" href="https://breathepilatesstudio.com.au">
         FAQ
     </a>
 </li><li class="nav-item dropdown">
@@ -138,7 +138,7 @@ div,span,h1,h2,h3,h4,h5,h6,p,blockquote,a,ol,ul,li,figcaption,textarea,input{fon
     <a class="nav-link link text-white display-7" href="stafflist.html">
     STAFF</a>
 </li><li class="nav-item">
-    <a class="nav-link link text-white display-7" href="#">
+    <a class="nav-link link text-white display-7" href="https://breathepilatesstudio.com.au">
         FAQ
     </a>
 </li><li class="nav-item dropdown">
