--- a/page9.html
+++ b/page9.html
@@ -49,7 +49,7 @@ div,span,h1,h2,h3,h4,h5,h6,p,blockquote,a,ol,ul,li,figcaption,textarea,input{fon
     <a class="nav-link link text-white display-7" href="stafflist.html">
     STAFF</a>
 </li><li class="nav-item">
-    <a class="nav-link link text-white display-7" href="#">
+    <a class="nav-link link text-white display-7" href="https://breathepilatesstudio.com.au">
         FAQ
     </a>
 </li><li class="nav-item dropdown">
@@ -136,7 +136,7 @@ div,span,h1,h2,h3,h4,h5,h6,p,blockquote,a,ol,ul,li,figcaption,textarea,input{fon
     <a class="nav-link link text-white display-7" href="stafflist.html">
     STAFF</a>
 </li><li class="nav-item">
-    <a class="nav-link link text-white display-7" href="#">
+    <a class="nav-link link text-white display-7" href="https://breathepilatesstudio.com.au">
         FAQ
     </a>
 </li><li class="nav-item dropdown">
