--- a/faq.html
+++ b/faq.html
@@ -50,7 +50,7 @@ div,span,h1,h2,h3,h4,h5,h6,p,blockquote,a,ol,ul,li,figcaption,textarea,input{fon
     </a>
     <div class="dropdown-menu">
         <a class="dropdown-item text-secondary display-7" href="matwork.html">Matwork</a><a class="dropdown-item text-secondary display-7" href="barre.html">Barre + Boxilattes</a><a class="dropdown-item text-secondary display-7" href="reformer.html">Reformer</a><a class="dropdown-item text-secondary display-7" href="pregnancy.html">Pregnancy + Post Natal</a>
-        <a class="dropdown-item text-secondary display-7" href="classlist.html">Class List</a><a class="dropdown-item text-secondary display-7" href="stafflist.html">Staff List</a>
+        <a class="dropdown-item text-secondary display-7" href="classlist.html">________________________</a><a class="dropdown-item text-secondary display-7" href="classlist.html">Class List</a><a class="dropdown-item text-secondary display-7" href="stafflist.html">Staff List</a>
         
     </div>
 </li><li class="nav-item"><a class="nav-link link text-secondary display-7" href="locations.html">
@@ -135,7 +135,7 @@ div,span,h1,h2,h3,h4,h5,h6,p,blockquote,a,ol,ul,li,figcaption,textarea,input{fon
     </a>
     <div class="dropdown-menu">
         <a class="dropdown-item text-secondary display-7" href="matwork.html">Matwork</a><a class="dropdown-item text-secondary display-7" href="barre.html">Barre + Boxilattes</a><a class="dropdown-item text-secondary display-7" href="reformer.html">Reformer</a><a class="dropdown-item text-secondary display-7" href="pregnancy.html">Pregnancy + Post Natal</a>
-        <a class="dropdown-item text-secondary display-7" href="classlist.html">Class List</a><a class="dropdown-item text-secondary display-7" href="stafflist.html">Staff List</a>
+        <a class="dropdown-item text-secondary display-7" href="classlist.html">________________________</a><a class="dropdown-item text-secondary display-7" href="classlist.html">Class List</a><a class="dropdown-item text-secondary display-7" href="stafflist.html">Staff List</a>
         
     </div>
 </li><li class="nav-item"><a class="nav-link link text-secondary display-7" href="locations.html">
