--- a/appointments02.html
+++ b/appointments02.html
@@ -30,7 +30,7 @@ div,span,h1,h2,h3,h4,h5,h6,p,blockquote,a,ol,ul,li,figcaption,textarea,input{fon
   <script async custom-template="amp-mustache" src="https://cdn.ampproject.org/v0/amp-mustache-0.2.js"></script>
   <script async custom-element="amp-iframe" src="https://cdn.ampproject.org/v0/amp-iframe-0.1.js"></script>
   
-  
+  <script src="https://widgets.healcode.com/javascripts/healcode.js" type="text/javascript"></script>
 </head>
 <body><div id="top-page"></div>                                         <amp-animation id="showScrollToTopAnim" layout="nodisplay">                                             <script type="application/json">                                             {                                                 "duration": "200ms",                                                 "fill": "both",                                                 "iterations": "1",                                                 "direction": "alternate",                                                 "animations": [                                                     {                                                         "selector": "#scrollToTopButton",                                                         "keyframes": [                                                             { "opacity": "0.4", "visibility": "visible" }                                                         ]                                                     }                                                 ]                                             }                                             </script>                                         </amp-animation>                                         <amp-animation id="hideScrollToTopAnim" layout="nodisplay">                                             <script type="application/json">                                             {                                                 "duration": "200ms",                                                 "fill": "both",                                                 "iterations": "1",                                                 "direction": "alternate",                                                 "animations": [                                                     {                                                         "selector": "#scrollToTopButton",                                                         "keyframes": [                                                             { "opacity": "0", "visibility": "hidden" }                                                         ]                                                     }                                                 ]                                             }                                             </script>                                         </amp-animation>                                         <div id="scrollToTopMarker">                                             <amp-position-observer on="enter:hideScrollToTopAnim.start; exit:showScrollToTopAnim.start" layout="nodisplay">                                             </amp-position-observer>                                         </div><amp-sidebar id="sidebar" class="cid-rxuBt6VNIa" layout="nodisplay" side="right">
     <div class="builder-sidebar" id="builder-sidebar">
@@ -67,10 +67,7 @@ div,span,h1,h2,h3,h4,h5,h6,p,blockquote,a,ol,ul,li,figcaption,textarea,input{fon
     <a class="nav-link link text-secondary display-7" href="pricing.html">
     PRICING</a>
 </li>
-<li class="nav-item">
-    <a class="nav-link link text-secondary display-7" href="social.html">
-        SOCIAL</a>
-</li></ul>
+</ul>
 </div>
 </amp-sidebar>
   <section class="menu1 menu horizontal-menu animated-menu cid-rxuBt6VNIa" id="menu1-w">
@@ -129,7 +126,7 @@ div,span,h1,h2,h3,h4,h5,h6,p,blockquote,a,ol,ul,li,figcaption,textarea,input{fon
 </div>
 
 <div class="navbar-buttons mbr-section-btn"><a class="btn btn-md btn-secondary display-7">
-        <healcode-widget data-version="0.2" data-link-class="healcode-link" data-site-id="30235" data-mb-site-id="283374" data-type="account-link" data-inner-html="Login"></healcode-widget>
+     <healcode-widget data-version="0.2" data-link-class="healcode-link" data-site-id="30235" data-mb-site-id="283374" data-type="account-link" data-inner-html="Login"></healcode-widget>
         <span class="iconfont-wrapper">
             <span class="fa fa-arrow-right mbr-iconfont-btn mbr-iconfont"><svg width="100%" height="100%" viewBox="0 0 1792 1792" xmlns="http://www.w3.org/2000/svg" fill="currentColor"><path d="M1600 960q0 54-37 91l-651 651q-39 37-91 37-51 0-90-37l-75-75q-38-38-38-91t38-91l293-293h-704q-52 0-84.5-37.5t-32.5-90.5v-128q0-53 32.5-90.5t84.5-37.5h704l-293-294q-38-36-38-90t38-90l75-75q38-38 90-38 53 0 91 38l651 651q37 35 37 90z"></path></svg></span>
     </span></a></div>
@@ -162,10 +159,7 @@ div,span,h1,h2,h3,h4,h5,h6,p,blockquote,a,ol,ul,li,figcaption,textarea,input{fon
     <a class="nav-link link text-secondary display-7" href="pricing.html">
     PRICING</a>
 </li>
-<li class="nav-item">
-    <a class="nav-link link text-secondary display-7" href="social.html">
-        SOCIAL</a>
-</li></ul>
+</ul>
 </div>
 
 <button on="tap:sidebar.toggle" class="ampstart-btn hamburger sticky-but">
