create github pages

--- a/classlist.html
+++ b/classlist.html
@@ -45,13 +45,13 @@ div,span,h1,h2,h3,h4,h5,h6,p,blockquote,a,ol,ul,li,figcaption,textarea,input{fon
             ABOUT</a><div class="dropdown-menu"><a class="dropdown-item text-secondary display-7" href="ourstudio.html">Our Studio</a><a class="dropdown-item text-secondary display-7" href="ourvalues.html">Our Values</a><a class="dropdown-item text-secondary display-7" href="faq.html">FAQ</a></div>
 
     </li>
-    <li class="nav-item dropdown">
-        <a class="nav-link link dropdown-toggle text-secondary display-7" data-toggle="dropdown-submenu" aria-expanded="false">
+    <li class="nav-item dropdown open">
+        <a class="nav-link link dropdown-toggle text-secondary display-7" data-toggle="dropdown-submenu" aria-expanded="true">
         SERVICES
     </a>
     <div class="dropdown-menu">
         <a class="dropdown-item text-secondary display-7" href="matwork.html">Matwork</a>
-        <a class="dropdown-item text-secondary display-7" href="barre.html">Barre+Boxilates</a><a class="dropdown-item text-secondary display-7" href="reformer.html">Reformer</a><a class="dropdown-item text-secondary display-7" href="pregnancy.html">Pregnancy+Post Natal</a><a class="dropdown-item text-secondary display-7" href="classlist.html">Class List</a>
+        <a class="dropdown-item text-secondary display-7" href="barre.html">Barre+Boxilates</a><a class="dropdown-item text-secondary display-7" href="reformer.html">Reformer</a><a class="dropdown-item text-secondary display-7" href="pregnancy.html">Pregnancy+Post Natal</a><a class="dropdown-item text-secondary display-7" href="classlist.html">______________________</a><a class="dropdown-item text-secondary display-7" href="classlist.html">Class List</a>
         <a class="dropdown-item text-secondary display-7" href="stafflist.html" aria-expanded="false">Staff List</a>
     </div>
 </li><li class="nav-item">
@@ -66,8 +66,7 @@ div,span,h1,h2,h3,h4,h5,h6,p,blockquote,a,ol,ul,li,figcaption,textarea,input{fon
 <li class="nav-item">
     <a class="nav-link link text-secondary display-7" href="pricing.html">
     PRICING</a>
-</li>
-</ul>
+</li></ul>
 </div>
 </amp-sidebar>
   <section class="menu1 menu horizontal-menu animated-menu cid-rxu0uc6ZCh" id="menu1-n">
@@ -137,13 +136,13 @@ div,span,h1,h2,h3,h4,h5,h6,p,blockquote,a,ol,ul,li,figcaption,textarea,input{fon
             ABOUT</a><div class="dropdown-menu"><a class="dropdown-item text-secondary display-7" href="ourstudio.html">Our Studio</a><a class="dropdown-item text-secondary display-7" href="ourvalues.html">Our Values</a><a class="dropdown-item text-secondary display-7" href="faq.html">FAQ</a></div>
 
     </li>
-    <li class="nav-item dropdown">
-        <a class="nav-link link dropdown-toggle text-secondary display-7" data-toggle="dropdown-submenu" aria-expanded="false">
+    <li class="nav-item dropdown open">
+        <a class="nav-link link dropdown-toggle text-secondary display-7" data-toggle="dropdown-submenu" aria-expanded="true">
         SERVICES
     </a>
     <div class="dropdown-menu">
         <a class="dropdown-item text-secondary display-7" href="matwork.html">Matwork</a>
-        <a class="dropdown-item text-secondary display-7" href="barre.html">Barre+Boxilates</a><a class="dropdown-item text-secondary display-7" href="reformer.html">Reformer</a><a class="dropdown-item text-secondary display-7" href="pregnancy.html">Pregnancy+Post Natal</a><a class="dropdown-item text-secondary display-7" href="classlist.html">Class List</a>
+        <a class="dropdown-item text-secondary display-7" href="barre.html">Barre+Boxilates</a><a class="dropdown-item text-secondary display-7" href="reformer.html">Reformer</a><a class="dropdown-item text-secondary display-7" href="pregnancy.html">Pregnancy+Post Natal</a><a class="dropdown-item text-secondary display-7" href="classlist.html">______________________</a><a class="dropdown-item text-secondary display-7" href="classlist.html">Class List</a>
         <a class="dropdown-item text-secondary display-7" href="stafflist.html" aria-expanded="false">Staff List</a>
     </div>
 </li><li class="nav-item">
@@ -158,8 +157,7 @@ div,span,h1,h2,h3,h4,h5,h6,p,blockquote,a,ol,ul,li,figcaption,textarea,input{fon
 <li class="nav-item">
     <a class="nav-link link text-secondary display-7" href="pricing.html">
     PRICING</a>
-</li>
-</ul>
+</li></ul>
 </div>
 
 <button on="tap:sidebar.toggle" class="ampstart-btn hamburger sticky-but">
@@ -260,7 +258,7 @@ div,span,h1,h2,h3,h4,h5,h6,p,blockquote,a,ol,ul,li,figcaption,textarea,input{fon
                 <div class="img-wrap">&nbsp;
 <!--                    <amp-img src="file:///C:/dev/mobirise/bps_backup_20190730/assets/images/bps_logo-150x40.png" layout="responsive" width="116.25" height="31" alt="" class="mobirise-loader">
                         <div placeholder class="placeholder"></div>
-                        <img class="mbr-temp" src="assets/images/bps-logo-150x4054.png" alt="" title>
+                        <img class="mbr-temp" src="assets/images/bps-logo-150x408.png" alt="" title>
                     </amp-img>-->
                 </div>
                 
