create github pages

--- a/classlist.html
+++ b/classlist.html
@@ -9,7 +9,7 @@
   <link rel="shortcut icon" href="assets/images/12278679-178671905814554-6409431870868768230-n-128x128.png" type="image/x-icon">
   <meta name="description" content="">
   
-  <title>Class List</title>
+  <title>Class List (Classic01)</title>
   
 <link rel="canonical" href="https://breathepilateswa.github.io/breatepilateswa/classlist.html">
  <style amp-boilerplate>body{-webkit-animation:-amp-start 8s steps(1,end) 0s 1 normal both;-moz-animation:-amp-start 8s steps(1,end) 0s 1 normal both;-ms-animation:-amp-start 8s steps(1,end) 0s 1 normal both;animation:-amp-start 8s steps(1,end) 0s 1 normal both}@-webkit-keyframes -amp-start{from{visibility:hidden}to{visibility:visible}}@-moz-keyframes -amp-start{from{visibility:hidden}to{visibility:visible}}@-ms-keyframes -amp-start{from{visibility:hidden}to{visibility:visible}}@-o-keyframes -amp-start{from{visibility:hidden}to{visibility:visible}}@keyframes -amp-start{from{visibility:hidden}to{visibility:visible}}</style>
@@ -45,7 +45,7 @@ div,span,h1,h2,h3,h4,h5,h6,p,blockquote,a,ol,ul,li,figcaption,textarea,input{fon
             ABOUT</a><div class="dropdown-menu"><a class="dropdown-item text-secondary display-7" href="ourstudio.html">Our Studio</a><a class="dropdown-item text-secondary display-7" href="ourvalues.html">Our Values</a><a class="dropdown-item text-secondary display-7" href="faq.html">FAQ</a></div>
 
     </li>
-    <li class="nav-item dropdown open">
+    <li class="nav-item dropdown">
         <a class="nav-link link dropdown-toggle text-secondary display-7" data-toggle="dropdown-submenu" aria-expanded="true">
         SERVICES
     </a>
@@ -136,7 +136,7 @@ div,span,h1,h2,h3,h4,h5,h6,p,blockquote,a,ol,ul,li,figcaption,textarea,input{fon
             ABOUT</a><div class="dropdown-menu"><a class="dropdown-item text-secondary display-7" href="ourstudio.html">Our Studio</a><a class="dropdown-item text-secondary display-7" href="ourvalues.html">Our Values</a><a class="dropdown-item text-secondary display-7" href="faq.html">FAQ</a></div>
 
     </li>
-    <li class="nav-item dropdown open">
+    <li class="nav-item dropdown">
         <a class="nav-link link dropdown-toggle text-secondary display-7" data-toggle="dropdown-submenu" aria-expanded="true">
         SERVICES
     </a>
@@ -258,7 +258,7 @@ div,span,h1,h2,h3,h4,h5,h6,p,blockquote,a,ol,ul,li,figcaption,textarea,input{fon
                 <div class="img-wrap">&nbsp;
 <!--                    <amp-img src="file:///C:/dev/mobirise/bps_backup_20190730/assets/images/bps_logo-150x40.png" layout="responsive" width="116.25" height="31" alt="" class="mobirise-loader">
                         <div placeholder class="placeholder"></div>
-                        <img class="mbr-temp" src="assets/images/bps-logo-150x408.png" alt="" title>
+                        <img class="mbr-temp" src="assets/images/bps-logo-150x4012.png" alt="" title>
                     </amp-img>-->
                 </div>
                 
