--- a/template.html
+++ b/template.html
@@ -45,8 +45,8 @@ div,span,h1,h2,h3,h4,h5,h6,p,blockquote,a,ol,ul,li,figcaption,textarea,input{fon
             ABOUT</a><div class="dropdown-menu"><a class="dropdown-item text-secondary display-7" href="ourstudio.html">Our Studio</a><a class="dropdown-item text-secondary display-7" href="ourvalues.html">Our Values</a><a class="dropdown-item text-secondary display-7" href="faq.html">FAQ</a></div>
 
     </li>
-    <li class="nav-item dropdown open">
-        <a class="nav-link link dropdown-toggle text-secondary display-7" data-toggle="dropdown-submenu" aria-expanded="true">
+    <li class="nav-item dropdown">
+        <a class="nav-link link dropdown-toggle text-secondary display-7" data-toggle="dropdown-submenu" aria-expanded="false">
         SERVICES
     </a>
     <div class="dropdown-menu">
@@ -136,8 +136,8 @@ div,span,h1,h2,h3,h4,h5,h6,p,blockquote,a,ol,ul,li,figcaption,textarea,input{fon
             ABOUT</a><div class="dropdown-menu"><a class="dropdown-item text-secondary display-7" href="ourstudio.html">Our Studio</a><a class="dropdown-item text-secondary display-7" href="ourvalues.html">Our Values</a><a class="dropdown-item text-secondary display-7" href="faq.html">FAQ</a></div>
 
     </li>
-    <li class="nav-item dropdown open">
-        <a class="nav-link link dropdown-toggle text-secondary display-7" data-toggle="dropdown-submenu" aria-expanded="true">
+    <li class="nav-item dropdown">
+        <a class="nav-link link dropdown-toggle text-secondary display-7" data-toggle="dropdown-submenu" aria-expanded="false">
         SERVICES
     </a>
     <div class="dropdown-menu">
@@ -268,7 +268,7 @@ div,span,h1,h2,h3,h4,h5,h6,p,blockquote,a,ol,ul,li,figcaption,textarea,input{fon
                 <div class="img-wrap">&nbsp;
 <!--                    <amp-img src="file:///C:/dev/mobirise/bps_backup_20190730/assets/images/bps_logo-150x40.png" layout="responsive" width="116.25" height="31" alt="" class="mobirise-loader">
                         <div placeholder class="placeholder"></div>
-                        <img class="mbr-temp" src="assets/images/bps-logo-150x4042.png" alt="" title>
+                        <img class="mbr-temp" src="assets/images/bps-logo-150x4050.png" alt="" title>
                     </amp-img>-->
                 </div>
                 
