create github pages

--- a/index.html
+++ b/index.html
@@ -239,11 +239,10 @@ div,span,h1,h2,h3,h4,h5,h6,p,blockquote,a,ol,ul,li,figcaption,textarea,input{fon
                                     </div>
                                 </div>
                             </header>
-                            <p class="mbr-fonts-style mbr-white display-5">
-                                Lorem ipsum dolor sit amet, consectetur adipiscing elit. Integer nisl risus, ultrices non dictum id, varius ut erat. Etiam
-                                eget tincidunt eros, at sollicitudin mauris. Nulla vehicula tellus quis justo finibus bibendum.
-                                Nulla consequat at est vitae iaculis. Interdum et malesuada fames ac ante ipsum primis in faucibus.
-                            </p>
+                            <p class="mbr-fonts-style mbr-white display-5">Pilates is an exercise system designed specifically to stretch and strengthen the entire body whilst simultaneously calming the mind. Developed by Joseph Pilates in the early 20th century and originally called “Contrology”, it was used during the First World War to improve the rehabilitation program and assist soldiers in their recovery and maintaining their health by strengthening, stretching and stabilising the body.
+<br>Joe believed that mental and physical health are fundamental to one another employing the 7 Principles in every workout – alignment, centring, concentration, control, precision, breathing and flowing movement creating a holistic approach to body conditioning.
+<br>Pilates will not only build strength, flexibility and lean muscle but align the spine as well. There is a predominant focus on the ‘core’ and its intrinsic muscles – Transverse Abdominis, Pelvic Floor and Multifidus – muscles which are often overlooked in other forms of exercise but are essential to postural awareness and alignment.
+<br>Due to its focus on the core and functional movement patterns Pilates has become very popular in rehabilitation and is recommended by physiotherapists, chiropractors and medical practitioners alike.<br><br></p>
                         </section>
                         <section>
                             <header class="mbr-section-title">
@@ -262,10 +261,7 @@ div,span,h1,h2,h3,h4,h5,h6,p,blockquote,a,ol,ul,li,figcaption,textarea,input{fon
                                 </div>
                             </header>
                             <p class="mbr-fonts-style mbr-white display-5">
-                                Lorem ipsum dolor sit amet, consectetur adipiscing elit. Integer nisl risus, ultrices non dictum id, varius ut erat. Etiam
-                                eget tincidunt eros, at sollicitudin mauris. Nulla vehicula tellus quis justo finibus bibendum.
-                                Nulla consequat at est vitae iaculis. Interdum et malesuada fames ac ante ipsum primis in faucibus.
-                            </p>
+                                We recommend starting with one of our Matwork Pilates classes but we do cater to all ability levels in our classes.<br><br></p>
                         </section>
                         <section>
                             <header class="mbr-section-title">
@@ -283,10 +279,7 @@ div,span,h1,h2,h3,h4,h5,h6,p,blockquote,a,ol,ul,li,figcaption,textarea,input{fon
                                     </div>
                                 </div>
                             </header>
-                            <p class="mbr-fonts-style mbr-white display-5">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Integer nisl risus, ultrices non dictum
-                                id, varius ut erat. Etiam eget tincidunt eros, at sollicitudin mauris. Nulla vehicula tellus
-                                quis justo finibus bibendum. Nulla consequat at est vitae iaculis. Interdum et malesuada fames
-                            ac ante ipsum primis in faucibus.</p>
+                            <p class="mbr-fonts-style mbr-white display-5"><strong>No, not at all.</strong> <br>Everyone has their base line when starting Pilates and we are able to provide variations to suit everyone in class.<br><br></p>
                         </section>
 
                         <section>
@@ -306,9 +299,7 @@ div,span,h1,h2,h3,h4,h5,h6,p,blockquote,a,ol,ul,li,figcaption,textarea,input{fon
                                 </div>
                             </header>
                             <p class="mbr-fonts-style mbr-white display-5">
-                                Lorem ipsum dolor sit amet, consectetur adipiscing elit. Integer nisl risus, ultrices non dictum id, varius ut erat. Etiam
-                                eget tincidunt eros, at sollicitudin mauris. Nulla vehicula tellus quis justo finibus bibendum.
-                                Nulla consequat at est vitae iaculis. Interdum et malesuada fames ac ante ipsum primis in faucibus.
+                                This depends on your schedule, lifestyle and personal goals but we generally recommend three classes per week for maximum benefits and results but if you can only fit in one class per week then that’s a great place to start.<br><br>
                             </p>
                         </section>
 
@@ -329,9 +320,7 @@ div,span,h1,h2,h3,h4,h5,h6,p,blockquote,a,ol,ul,li,figcaption,textarea,input{fon
                                 </div>
                             </header>
                             <p class="mbr-fonts-style mbr-white display-5">
-                                Lorem ipsum dolor sit amet, consectetur adipiscing elit. Integer nisl risus, ultrices non dictum id, varius ut erat. Etiam
-                                eget tincidunt eros, at sollicitudin mauris. Nulla vehicula tellus quis justo finibus bibendum.
-                                Nulla consequat at est vitae iaculis. Interdum et malesuada fames ac ante ipsum primis in faucibus.
+                                Comfortable clothing that allows you to move easily – think light, breathable fabrics. Active Wear pants/leggings/shorts and a t-shirt or tank top is recommended. Our Reformer classes require grip socks to be worn and we stock these at the studio.<br><br>
                             </p>
                         </section>
                         <section>
@@ -351,9 +340,7 @@ div,span,h1,h2,h3,h4,h5,h6,p,blockquote,a,ol,ul,li,figcaption,textarea,input{fon
                                 </div>
                             </header>
                             <p class="mbr-fonts-style mbr-white display-5">
-                                Lorem ipsum dolor sit amet, consectetur adipiscing elit. Integer nisl risus, ultrices non dictum id, varius ut erat. Etiam
-                                eget tincidunt eros, at sollicitudin mauris. Nulla vehicula tellus quis justo finibus bibendum.
-                                Nulla consequat at est vitae iaculis. Interdum et malesuada fames ac ante ipsum primis in faucibus.
+                                All equipment needed for class is provided for you so just bring yourself, water, sweat towel and grip socks.<br><br>
                             </p>
                         </section>
                         <section>
@@ -372,10 +359,8 @@ div,span,h1,h2,h3,h4,h5,h6,p,blockquote,a,ol,ul,li,figcaption,textarea,input{fon
                                     </div>
                                 </div>
                             </header>
-                            <p class="mbr-fonts-style mbr-white display-5">
-                                Lorem ipsum dolor sit amet, consectetur adipiscing elit. Integer nisl risus, ultrices non dictum id, varius ut erat. Etiam
-                                eget tincidunt eros, at sollicitudin mauris. Nulla vehicula tellus quis justo finibus bibendum.
-                                Nulla consequat at est vitae iaculis. Interdum et malesuada fames ac ante ipsum primis in faucibus.
+                            <p class="mbr-fonts-style mbr-white display-5"><strong>
+                                YES absolutely!!</strong><br><br>
                             </p>
                         </section>
                         <section>
@@ -394,10 +379,8 @@ div,span,h1,h2,h3,h4,h5,h6,p,blockquote,a,ol,ul,li,figcaption,textarea,input{fon
                                     </div>
                                 </div>
                             </header>
-                            <p class="mbr-fonts-style mbr-white display-5">
-                                Lorem ipsum dolor sit amet, consectetur adipiscing elit. Integer nisl risus, ultrices non dictum id, varius ut erat. Etiam
-                                eget tincidunt eros, at sollicitudin mauris. Nulla vehicula tellus quis justo finibus bibendum.
-                                Nulla consequat at est vitae iaculis. Interdum et malesuada fames ac ante ipsum primis in faucibus.
+                            <p class="mbr-fonts-style mbr-white display-5"><strong>
+                                Yes we do.</strong> <br>Our creche is available at both studio locations Monday-Friday 8:30am-11:30am. Bookings are essential so please contact us to book your child in.<br><br>
                             </p>
                         </section>
                         <section>
@@ -416,11 +399,9 @@ div,span,h1,h2,h3,h4,h5,h6,p,blockquote,a,ol,ul,li,figcaption,textarea,input{fon
                                     </div>
                                 </div>
                             </header>
-                            <p class="mbr-fonts-style mbr-white display-5">
-                                Lorem ipsum dolor sit amet, consectetur adipiscing elit. Integer nisl risus, ultrices non dictum id, varius ut erat. Etiam
-                                eget tincidunt eros, at sollicitudin mauris. Nulla vehicula tellus quis justo finibus bibendum.
-                                Nulla consequat at est vitae iaculis. Interdum et malesuada fames ac ante ipsum primis in faucibus.
-                            </p>
+                            <p class="mbr-fonts-style mbr-white display-5"><strong>WANGARA STUDIO</strong> – we have pregnancy specific Reformer &amp; Matwork Pilates classes at our Wangara studio plus you can attend Barre, Booty Burner and Stretch &amp; Mobility.
+<br>
+<br><strong>CLARKSON STUDIO</strong> – You can attend all Matwork Pilates classes, Stretch &amp; Mobility and Booty Burner.&nbsp;<br><br></p>
                         </section>
                     </amp-accordion>
                 </div>
@@ -463,7 +444,7 @@ div,span,h1,h2,h3,h4,h5,h6,p,blockquote,a,ol,ul,li,figcaption,textarea,input{fon
             <div class="mbr-col-lg-6 mbr-col-sm-12 padding" style="border:none;border-color:#ffffff;max-width:100%;">
                 <!--<h3 class="mbr-text mbr-bold mbr-fonts-style group-title mbr-white" mbr-theme-style="display-7" mbr-if="showTitle" data-app-selector=".group-title">Breathe Pilates</h3>-->
                 <div class="img-wrap">
-                    <amp-img src="assets/images/bps-logo-150x401.png" layout="responsive" width="116.25" height="31" alt="" class="mobirise-loader">
+                    <amp-img src="assets/images/bps-logo-150x405.png" layout="responsive" width="116.25" height="31" alt="" class="mobirise-loader">
                         <div placeholder="" class="placeholder">
                                 <div class="mobirise-spinner">
                                     <em></em>
@@ -511,7 +492,7 @@ div,span,h1,h2,h3,h4,h5,h6,p,blockquote,a,ol,ul,li,figcaption,textarea,input{fon
                 <div class="img-wrap">&nbsp;
 <!--                    <amp-img src="file:///C:/dev/mobirise/bps_backup_20190730/assets/images/bps_logo-150x40.png" layout="responsive" width="116.25" height="31" alt="" class="mobirise-loader">
                         <div placeholder class="placeholder"></div>
-                        <img class="mbr-temp" src="assets/images/bps-logo-150x401.png" alt="" title>
+                        <img class="mbr-temp" src="assets/images/bps-logo-150x405.png" alt="" title>
                     </amp-img>-->
                 </div>
                 
