create github pages

--- a/ourteam.html
+++ b/ourteam.html
@@ -191,13 +191,15 @@ div,span,h1,h2,h3,h4,h5,h6,p,blockquote,a,ol,ul,li,figcaption,textarea,input{fon
 
 <div id="custom-html-6j"><!-- Type valid AMP HTML here -->
 <!-- for more info: https://www.ampproject.org/ -->
-<div id="content6-healcode-mobile">
-<healcode-widget data-type="staff_lists" data-widget-partner="object" data-widget-id="24265268b38" data-widget-version="0"></healcode-widget>
-</div>
+<section class="content6" id="content6-healcode">
+    <div id="content6-healcode-mobile">
+        <healcode-widget data-type="staff_lists" data-widget-partner="object" data-widget-id="24265268b38" data-widget-version="0"></healcode-widget>
+    </div>
 
-<div id="content6-healcode-pc">
-    <healcode-widget data-type="staff_lists" data-widget-partner="object" data-widget-id="24265268b38" data-widget-version="0"></healcode-widget>
-</div></div>
+    <div id="content6-healcode-pc">
+        <healcode-widget data-type="staff_lists" data-widget-partner="object" data-widget-id="24265268b38" data-widget-version="0"></healcode-widget>
+    </div>
+</section></div>
 
 <section class="footer2 cid-rz1BuBSDwq" id="footer2-7q">
 
@@ -259,7 +261,7 @@ div,span,h1,h2,h3,h4,h5,h6,p,blockquote,a,ol,ul,li,figcaption,textarea,input{fon
                 <div class="img-wrap">&nbsp;
 <!--                    <amp-img src="file:///C:/dev/mobirise/bps_backup_20190730/assets/images/bps_logo-150x40.png" layout="responsive" width="116.25" height="31" alt="" class="mobirise-loader">
                         <div placeholder class="placeholder"></div>
-                        <img class="mbr-temp" src="assets/images/bps-logo-150x404.png" alt="" title>
+                        <img class="mbr-temp" src="assets/images/bps-logo-150x4016.png" alt="" title>
                     </amp-img>-->
                 </div>
                 
@@ -297,7 +299,7 @@ div,span,h1,h2,h3,h4,h5,h6,p,blockquote,a,ol,ul,li,figcaption,textarea,input{fon
                 <div class="img-wrap">&nbsp;
 <!--                    <amp-img src="file:///C:/dev/mobirise/bps_backup_20190730/assets/images/bps_logo-150x40.png" layout="responsive" width="116.25" height="31" alt="" class="mobirise-loader">
                         <div placeholder class="placeholder"></div>
-                        <img class="mbr-temp" src="assets/images/bps-logo-150x404.png" alt="" title>
+                        <img class="mbr-temp" src="assets/images/bps-logo-150x4016.png" alt="" title>
                     </amp-img>-->
                 </div>
                 
