--- a/pregnancy.html
+++ b/pregnancy.html
@@ -206,13 +206,15 @@ div,span,h1,h2,h3,h4,h5,h6,p,blockquote,a,ol,ul,li,figcaption,textarea,input{fon
 
 <div id="custom-html-2e"><!-- Type valid AMP HTML here -->
 <!-- for more info: https://www.ampproject.org/ -->
-<div id="content6-healcode-mobile">
+<section class="content6" id="content6-healcode">
+    <div id="content6-healcode-mobile">
 <healcode-widget data-type="class_lists" data-widget-partner="object" data-widget-id="24464338b38" data-widget-version="0"></healcode-widget>
 </div>
 
 <div id="content6-healcode-pc">
 <healcode-widget data-type="class_lists" data-widget-partner="object" data-widget-id="24465378b38" data-widget-version="0"></healcode-widget>
-</div></div>
+</div>
+</section></div>
 
 <section class="footer2 cid-rz1CqE4dzD" id="footer2-83">
 
@@ -274,7 +276,7 @@ div,span,h1,h2,h3,h4,h5,h6,p,blockquote,a,ol,ul,li,figcaption,textarea,input{fon
                 <div class="img-wrap">&nbsp;
 <!--                    <amp-img src="file:///C:/dev/mobirise/bps_backup_20190730/assets/images/bps_logo-150x40.png" layout="responsive" width="116.25" height="31" alt="" class="mobirise-loader">
                         <div placeholder class="placeholder"></div>
-                        <img class="mbr-temp" src="assets/images/bps-logo-150x404.png" alt="" title>
+                        <img class="mbr-temp" src="assets/images/bps-logo-150x4016.png" alt="" title>
                     </amp-img>-->
                 </div>
                 
@@ -312,7 +314,7 @@ div,span,h1,h2,h3,h4,h5,h6,p,blockquote,a,ol,ul,li,figcaption,textarea,input{fon
                 <div class="img-wrap">&nbsp;
 <!--                    <amp-img src="file:///C:/dev/mobirise/bps_backup_20190730/assets/images/bps_logo-150x40.png" layout="responsive" width="116.25" height="31" alt="" class="mobirise-loader">
                         <div placeholder class="placeholder"></div>
-                        <img class="mbr-temp" src="assets/images/bps-logo-150x404.png" alt="" title>
+                        <img class="mbr-temp" src="assets/images/bps-logo-150x4016.png" alt="" title>
                     </amp-img>-->
                 </div>
                 
